style: format code

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint:check": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format:check": "prettier --check src/",
-    "format:fix": "prettier --write src/"
+    "lint:check": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
+    "format:check": "prettier --check .",
+    "format:fix": "prettier --write ."
   },
   "dependencies": {
     "@vueuse/core": "^13.6.0",
