--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.app.json",
-  "include": ["src/**/*.test.ts", "env.d.ts"],
+  "include": ["src/**/*.test.ts", "src/**/*.d.ts"],
   "exclude": [],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
